# EventYoloBenchmark

Kria-Petalinux/Yolo-Event-ML-Application/event_cam_ml_app_yolov7/src/: CMakeLists.txt  event_processor.cpp  event_processor.h  main_refactored.cpp  metavision_histo_viewer.cpp  timing_profiler.h  visualization.cpp  visualization.h  yolo_inference.cpp  yolo_inference.h
